<resources>
    <string name="welcome_text">¡bienvenido a Los Portales!</string>
    <string name="welcome_description">Taqueria Los Portales es un restaurante casual y rápido</string>
    <string name="button_start">¡empecemos!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="app_name">Taquería Los Portales</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of the Portales</string>
    <string name="sign_in">Sign in</string>

    <string name="our_menu">OUR MENU</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="combinaciones">Combinaciones</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>

</resources>