<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        app:srcCompat="@drawable/imagen1" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginLeft="0dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginLeft="0dp"
        android:hint="@string/e_mail" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:ems="10"
        android:layout_marginLeft="0dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:text="@string/terms" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/sign_in"
        android:textSize="20sp" />
</LinearLayout>